--- a/app/components/common/content/content_small.html
+++ b/app/components/common/content/content_small.html
@@ -5,7 +5,7 @@
             <div class="panel-body">
                 <div id="hbreadcrumb" class="pull-right">
                     <ol class="hbreadcrumb">
-                        <li><a ui-sref="dashboard">Dashboard&nbsp;&nbsp;/</a></li>
+                        <li><a href="{{'/' + content.community.key}}">{{ content.community.profile.name }}&nbsp;&nbsp;/</a></li>
                         <li ng-repeat="state in $state.$current.path" ng-class="{active: $last}">
                             <a ng-if="!(!!state.abstract) && !$last" href="#{{state.url.format($stateParams)}}">&nbsp;&nbsp;{{state.params.pageTitle.config.value}}&nbsp;&nbsp;/</a>
                             <span ng-if="$last">&nbsp;&nbsp;{{$state.params.pageTitle}}</span>
@@ -13,7 +13,7 @@
                     </ol>
                 </div>
                 <h2 class="font-light m-b-xs">
-                    {{ $state.params.pageTitle }}
+                    <span style="text-transform: none;">{{ $state.params.pageTitle }} in {{ content.community.profile.name }}</span>
                 </h2>
             </div>
         </div>
