--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -13,7 +13,7 @@
                     <div style="margin-top: 15px; margin-left: 0;">
 
                         <div class="header-nav-link">
-                            <a ui-sref="sc.people.dashboard">
+                            <a ui-sref="sc.people.dashboard({community_key: nav.community.key})">
                                     <span>
                                         <div class="col-xs-3 col-sm-1" style="text-align: center;">
                                             <i class="pe-7s-id" style="font-size: 24px; margin-top: 6px;"></i>
