--- a/app/components/people/people.dashboard.html
+++ b/app/components/people/people.dashboard.html
@@ -1,4 +1,4 @@
-<div ng-controller="PeopleController">
+<div>
     <div class="row">
         <div class="col-md-4">
         <!-- Navigation Block -->
@@ -10,7 +10,7 @@
                 <div class="panel-body filternav h226">
 
                     <ul class="panel-list">
-                        <li ng-class="{'active':global.context.selectedRole.indexOf('*') >= 0}" ng-click="filterRole('*')">
+                        <li ng-class="{'active':people.selectedRole.indexOf('*') >= 0}" ng-click="filterRole('*')">
                             <a href="javascript:void(0)">
                                 <i class="fa fa-fw fa-globe themed-color-dark"></i> <strong>All</strong>
                             </a>
@@ -18,22 +18,22 @@
                         <li>
                             <hr style="margin: 10px 0 10px 0;">
                         </li>
-                        <li ng-class="{'active':global.context.selectedRole.indexOf('Founder') >= 0}" ng-click="filterRole('Founder')">
+                        <li ng-class="{'active':people.selectedRole.indexOf('Founder') >= 0}" ng-click="filterRole('Founder')">
                             <a href="javascript:void(0)">
                                 <i class="fa fa-rocket text-navyblue"></i> Founders
                             </a>
                         </li>
-                        <li ng-class="{'active':global.context.selectedRole.indexOf('Leader') >= 0}" ng-click="filterRole('Founder')">
+                        <li ng-class="{'active':people.selectedRole.indexOf('Leader') >= 0}" ng-click="filterRole('Founder')">
                             <a href="javascript:void(0)">
                                 <i class="fa fa-flag text-danger"></i> Leaders
                             </a>
                         </li>
-                        <li ng-class="{'active':global.context.selectedRole.indexOf('Advisor') >= 0}" ng-click="filterRole('Advisor')">
+                        <li ng-class="{'active':people.selectedRole.indexOf('Advisor') >= 0}" ng-click="filterRole('Advisor')">
                             <a href="javascript:void(0)">
                                 <i class="fa fa-graduation-cap text-info"></i> Advisors
                             </a>
                         </li>
-                        <li ng-class="{'active':global.context.selectedRole.indexOf('Investor') >= 0}" ng-click="filterRole('Investor')">
+                        <li ng-class="{'active':people.selectedRole.indexOf('Investor') >= 0}" ng-click="filterRole('Investor')">
                             <a href="javascript:void(0)">
                                 <i class="fa fa-leaf text-success"></i> Investors
                             </a>
@@ -50,14 +50,14 @@
                 </div>
                 <div class="panel-body filternav h226">
                     <ul class="panel-list">
-                        <li ng-class="{'active':global.context.selectedIndustry.indexOf('*') >= 0}" ng-click="filterIndustry('*');">
+                        <li ng-class="{'active':people.selectedIndustry.indexOf('*') >= 0}" ng-click="filterIndustry('*');">
                             <a><i class="fa fa-fw fa-globe themed-color-dark icon-push"></i> <strong>All</strong></a>
                         </li>
                         <li>
                             <hr style="margin: 10px 0 10px 0;">
                         </li>
-                        <li ng-repeat="industry in industries" ng-class="{'active':global.context.selectedIndustry.indexOf(industry[global.context.location].profile.name) >= 0}" ng-click="filterIndustry(industry[global.context.location].profile.name);">
-                            <a><i class="fa {{industry[global.context.location].profile.icon}}"></i> {{industry[global.context.location].profile.name}}</a>
+                        <li ng-repeat="industry in people.industries" ng-class="{'active':people.selectedIndustry.indexOf(industry[people.community.key].profile.name) >= 0}" ng-click="filterIndustry(industry[people.community.key].profile.name);">
+                            <a><i class="fa {{industry[people.community.key].profile.icon}}"></i> {{industry[people.community.key].profile.name}}</a>
                         </li>
                     </ul>
                 </div>
@@ -71,14 +71,14 @@
                 </div>
                 <div class="panel-body filternav h226">
                     <ul class="panel-list">
-                        <li ng-class="{'active':global.context.selectedNetwork.indexOf('*') >= 0}" ng-click="filterNetwork('*');">
+                        <li ng-class="{'active':people.selectedNetwork.indexOf('*') >= 0}" ng-click="filterNetwork('*');">
                             <a><i class="fa fa-fw fa-globe themed-color-dark icon-push"></i> <strong>All</strong></a>
                         </li>
                         <li>
                             <hr style="margin: 10px 0 10px 0;">
                         </li>
-                        <li ng-repeat="network in networks" ng-class="{'active':global.context.selectedNetwork.indexOf(network[global.context.location].profile.name) >= 0}" ng-click="filterNetwork(network[global.context.location].profile.name);">
-                            <a><i class="fa {{network[global.context.location].profile.icon}}"></i> {{network[global.context.location].profile.name}}</a>
+                        <li ng-repeat="network in people.networks" ng-class="{'active':people.selectedNetwork.indexOf(network[people.community.key].profile.name) >= 0}" ng-click="filterNetwork(network[people.community.key].profile.name);">
+                            <a><i class="fa {{network[people.community.key].profile.icon}}"></i> {{network[people.community.key].profile.name}}</a>
                         </li>
                     </ul>
                 </div>
@@ -92,43 +92,43 @@
         <div class="hpanel">
             <div class="panel-footer top">
                 <div class="pull-right">
-                    <strong>{{users.start}} - {{users.end}}</strong> of <strong>{{users.total_count}}&nbsp;&nbsp;</strong>
+                    <strong>{{people.users.start}} - {{people.users.end}}</strong> of <strong>{{people.users.total_count}}&nbsp;&nbsp;</strong>
                     <div class="btn-group btn-group-sm" style="margin-top: -2px;">
-                        <span ng-if="users.prev"><a ng-click="getUsers(users.prev)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
-                        <span ng-if="users.next"><a ng-click="getUsers(users.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
+                        <span ng-if="people.users.prev"><a ng-click="people.getUsers(people.users.prev)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
+                        <span ng-if="people.users.next"><a ng-click="people.getUsers(people.users.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
                     </div>
                 </div>
                 <div class="pull-right" style="margin-right: 25px; min-width: 175px;">
-                    <ui-select multiple ng-model="skills.selected" theme="bootstrap" ng-disabled="disabled" limit="3">
+                    <ui-select multiple ng-model="people.skills.selected" theme="bootstrap" ng-disabled="disabled" limit="3">
                         <ui-select-match placeholder="Search by skill.." class="skill-input">{{$item}}</ui-select-match>
-                        <ui-select-choices repeat="skill in skills.list | filter:$select.search | limitTo: 5">
+                        <ui-select-choices repeat="skill in people.skills.list | filter:$select.search | limitTo: 5">
                             {{skill}}
                         </ui-select-choices>
                     </ui-select>
                 </div>
-                <span style="font-size: 17px;" ng-bind-html="title"></span>
+                <span style="font-size: 17px;" ng-bind-html="people.title"></span>
             </div>
 
             <div class="panel-body content">
                 <div class="row">
                     <td style="border-bottom: 1px solid #fff; border-top: none; padding: 0;" colspan="3"></td>
                 </div>
-                <div ng-show="global.search.tag" style="text-align: center" ng-cloak><h2><br/>Searching for {{global.search.tag}}..</h2></div>
-                <div ng-repeat="item in users.results" ng-switch on="$index % 2" style="margin-top: 10px;">
+                <div ng-show="people.search.tag" style="text-align: center" ng-cloak><h2><br/>Searching for {{people.search.tag}}..</h2></div>
+                <div ng-repeat="item in people.users.results" ng-switch on="$index % 2" style="margin-top: 10px;">
                     <div class="col-md-6" ng-switch-when="0">
-                        <div class="row"  ng-include="'views/people/people.list.html'"></div>
+                        <div class="row"  ng-include="'components/people/people.list.html'"></div>
                     </div>
                     <div class="col-md-6" ng-switch-when="1">
-                        <div class="row"  ng-include="'views/people/people.list.html'"></div>
+                        <div class="row"  ng-include="'components/people/people.list.html'"></div>
                     </div>
                 </div>
             </div>
             <div class="panel-footer" style="height:45px;">
                 <div class="pull-right">
-                    <strong>{{users.start}} - {{users.end}}</strong> of <strong>{{users.total_count}}&nbsp;&nbsp;</strong>
+                    <strong>{{people.users.start}} - {{people.users.end}}</strong> of <strong>{{people.users.total_count}}&nbsp;&nbsp;</strong>
                     <div class="btn-group btn-group-sm" style="margin-top: -2px;">
-                        <span ng-if="users.prev"><a ng-click="getUsers(users.prev)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
-                        <span ng-if="users.next"><a ng-click="getUsers(users.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
+                        <span ng-if="people.users.prev"><a ng-click="people.getUsers(people.users.prev)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
+                        <span ng-if="people.users.next"><a ng-click="people.getUsers(people.users.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
                     </div>
                 </div>
             </div>
