nav highlight working

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -424,6 +424,8 @@ footer, .push {
 
 #side-menu li .nav-second-level li.active a {
   color: #777;
+  border-left: 3px solid #82BC4B;
+  background-color: #F6F8F9;
 }
 
 #side-menu.nav > li > a:hover, #side-menu.nav > li > a:focus {
