--- a/app/components/common/content/content_big.html
+++ b/app/components/common/content/content_big.html
@@ -10,17 +10,17 @@
 
                 <div id="hbreadcrumb" class="pull-right m-t-lg">
                     <ol class="hbreadcrumb">
-                        <li><a ui-sref="dashboard">Dashboard&nbsp;&nbsp;/</a></li>
+                        <li><a href="{{'/' + content.community.key}}">{{ content.community.profile.name }}&nbsp;&nbsp;/</a></li>
                         <li ng-repeat="state in $state.$current.path" ng-class="{active: $last}">
-                            <a ng-if="!(!!state.abstract) && !$last" href="#{{state.url.format($stateParams)}}">&nbsp;&nbsp;{{state.params.pageTitle.config.value}}&nbsp;&nbsp;/</a>
-                            <span ng-if="$last">&nbsp;&nbsp;{{$state.params.community.profile.name}}</span>
+                            <a ng-if="state.params.pageTitle.config.value && !(!!state.abstract) && !$last" href="#{{state.url.format($stateParams)}}">&nbsp;&nbsp;{{state.params.pageTitle.config.value}}&nbsp;&nbsp;/</a>
+                            <span ng-if="$last">&nbsp;&nbsp;{{$state.params.pageTitle}}</span>
                         </li>
                     </ol>
                 </div>
                 <h2 class="font-light m-b-xs">
-                    {{ $state.params.community.profile.name }}
+                    {{ content.community.profile.name }}
                 </h2>
-                <small>{{ $state.params.community.profile.description }}</small>
+                <small>{{ content.community.profile.description }}</small>
             </div>
         </div>
     </div>
