--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -13,7 +13,7 @@
                     <div style="margin-top: 15px; margin-left: 0;">
 
                         <div class="header-nav-link">
-                            <a ui-sref="sc.people.dashboard({community_key: nav.community.key})">
+                            <a ui-sref="people.dashboard({community_key: nav.community.key})">
                                     <span>
                                         <div class="col-xs-3 col-sm-1" style="text-align: center;">
                                             <i class="pe-7s-id" style="font-size: 24px; margin-top: 6px;"></i>
@@ -28,7 +28,7 @@
 
 
                         <div class="header-nav-link pushright">
-                            <a ui-sref="sc.startups.dashboard">
+                            <a ui-sref="startups.dashboard">
                                     <span>
                                         <div class="col-xs-3 col-sm-1" style="text-align: center;">
                                             <i class="pe-7s-power" style="font-size: 24px; margin-top: 6px;"></i>
@@ -87,10 +87,10 @@
             <div class="container side-menu" style="padding-top: 10px; margin-left: -20px;">
                 <div class="row side-menu">
                     <div class="col-sm-3">
-                        <a ui-sref="sc.people.profile"><img class="img-circle m-b" ng-src="{{nav.user.profile.avatar || nav.user.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}" alt="{{nav.user.profile.name}}" style="height: 40px; width: 40px; "/></a>
+                        <a ui-sref="people.profile"><img class="img-circle m-b" ng-src="{{nav.user.profile.avatar || nav.user.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}" alt="{{nav.user.profile.name}}" style="height: 40px; width: 40px; "/></a>
                     </div>
                     <div class="col-sm-9" style="padding-top: 3px;">
-                        <a ui-sref="sc.people.profile">{{nav.user.profile.name}}</a>
+                        <a ui-sref="people.profile">{{nav.user.profile.name}}</a>
                         <div style="margin-left: -10px; padding-top: 1px;">
                             <span ng-repeat="item in nav.user.profile.roles" class="user-role"><i ng-attr-title="{{item}}" ng-class="{'text-primary fa fa-rocket' : item == 'Founder', 'text-info fa fa-graduation-cap' : item == 'Advisor', 'text-success fa fa-leaf' : item == 'Investor', 'text-danger fa fa-flag' : item == 'Leader'}"></i></span>
                         </div>
@@ -109,29 +109,29 @@
 
         <ul side-navigation class="nav" id="side-menu">
 
-            <li ng-class="{active: $state.includes('location')}" class="active">
+            <li class="active">
                 <a href="#"><span class="nav-label">Locations</span><span class="fa arrow"></span> </a>
-                <ul class="nav nav-second-level" ng-class="{in: $state.includes('location')}">
-                    <li ui-sref-active="active" ng-repeat="item in nav.locations">
-                        <a ui-sref="sc.location.dashboard({community_key: item.key})"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
+                <ul class="nav nav-second-level">
+                    <li ng-repeat="item in nav.locations" ng-class="{active: nav.path.includes(item.key)}">
+                        <a ui-sref="location.dashboard({community_key: item.key})"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
                     </li>
                 </ul>
             </li>
 
-            <li ng-class="{active: $state.includes('industry')}" class="active">
+            <li class="active">
                 <a href="#"><span class="nav-label">Clusters</span><span class="fa arrow"></span> </a>
-                <ul class="nav nav-second-level" ng-class="{in: $state.includes('industry')}">
-                    <li ui-sref-active="active" ng-repeat="item in nav.industries">
-                        <a ui-sref="sc.industry.dashboard({community_key: item.key})"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
+                <ul class="nav nav-second-level">
+                    <li ng-repeat="item in nav.industries" ng-class="{active: nav.path.includes(item.key)}">
+                        <a ui-sref="industry.dashboard({community_key: item.key})"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
                     </li>
                 </ul>
             </li>
 
-            <li ng-class="{active: $state.includes('network')}" class="active">
+            <li class="active">
                 <a href="#"><span class="nav-label">Networks</span><span class="fa arrow"></span> </a>
-                <ul class="nav nav-second-level" ng-class="{in: $state.includes('network')}">
-                    <li ui-sref-active="active" ng-repeat="item in nav.networks">
-                        <a ui-sref="sc.network.dashboard({community_key: item.key})"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
+                <ul class="nav nav-second-level">
+                    <li ng-repeat="item in nav.networks" ng-class="{active: nav.path.includes(item.key)}">
+                        <a ui-sref="network.dashboard({community_key: item.key})"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
                     </li>
                 </ul>
             </li>
