view dir is gone

--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div map-lazy-load="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXO1cNiJac7iP2I3JoXhOd1pWs6gA-f4k">
-                <map id="nav-map" center="{{maploc}}" zoom="11" disable-default-u-i="true">
+                <map id="nav-map" center="{{nav.maploc}}" zoom="11" disable-default-u-i="true">
                     <custom-control position="BOTTOM_CENTER" on-click="changeLocation()">
                         <div id="change-location">Change Location</div>
                     </custom-control>
