--- a/app/components/common/content/content_small.html
+++ b/app/components/common/content/content_small.html
@@ -7,13 +7,15 @@
                     <ol class="hbreadcrumb">
                         <li><a href="{{'/' + content.community.key}}">{{ content.community.profile.name }}&nbsp;&nbsp;/</a></li>
                         <li ng-repeat="state in $state.$current.path" ng-class="{active: $last}">
-                            <a ng-if="!(!!state.abstract) && !$last" href="#{{state.url.format($stateParams)}}">&nbsp;&nbsp;{{state.params.pageTitle.config.value}}&nbsp;&nbsp;/</a>
+                            <a ng-if="state.params.pageTitle.config.value && !(!!state.abstract) && !$last" href="#{{state.url.format($stateParams)}}">&nbsp;&nbsp;{{state.params.pageTitle.config.value}}&nbsp;&nbsp;/</a>
                             <span ng-if="$last">&nbsp;&nbsp;{{$state.params.pageTitle}}</span>
                         </li>
                     </ol>
                 </div>
                 <h2 class="font-light m-b-xs">
-                    <span style="text-transform: none;">{{ $state.params.pageTitle }} in {{ content.community.profile.name }}</span>
+                    <span style="text-transform: none;">{{ $state.params.pageTitle }}&nbsp;
+                        <span ng-if="content.community.type !== 'user'">in {{ content.community.profile.name }}</span>
+                    </span>
                 </h2>
             </div>
         </div>
