--- a/app/components/startups/startups.dashboard.html
+++ b/app/components/startups/startups.dashboard.html
@@ -1,4 +1,4 @@
-<div ng-controller="StartupsController" animate-panel effect="zoomIn">
+<div animate-panel effect="zoomIn">
     <div class="row">
         <div class="col-md-4 animated-panel zoomIn">
         <!-- Navigation Block -->
@@ -11,7 +11,7 @@
                 <div class="panel-body filternav h226">
 
                     <ul class="panel-list">
-                        <li ng-class="{'active':global.context.selectedStage.indexOf('*') >= 0}" ng-click="filterStage('*')">
+                        <li ng-class="{'active':startups.selectedStage.indexOf('*') >= 0}" ng-click="filterStage('*')">
                             <a href="javascript:void(0)">
                                 <i class="fa fa-fw fa-globe themed-color-dark"></i> <strong>All</strong>
                             </a>
@@ -19,25 +19,25 @@
                         <li>
                             <hr style="margin: 10px 0 10px 0;">
                         </li>
-                        <li ng-class="{'active':global.context.selectedStage.indexOf('Bootstrap') >= 0}" ng-click="filterStage('Bootstrap')">
+                        <li ng-class="{'active':startups.selectedStage.indexOf('Bootstrap') >= 0}" ng-click="filterStage('Bootstrap')">
                             <a href="javascript:void(0)">
                                 Bootstrap
                                 <span class="pull-right">1 - 2</span>
                             </a>
                         </li>
-                        <li ng-class="{'active':global.context.selectedStage.indexOf('Validation') >= 0}" ng-click="filterStage('Validation')">
+                        <li ng-class="{'active':startups.selectedStage.indexOf('Validation') >= 0}" ng-click="filterStage('Validation')">
                             <a href="javascript:void(0)">
                                 Validation
                                 <span class="pull-right">3 - 10</span>
                             </a>
                         </li>
-                        <li ng-class="{'active':global.context.selectedStage.indexOf('Growth') >= 0}" ng-click="filterStage('Growth')">
+                        <li ng-class="{'active':startups.selectedStage.indexOf('Growth') >= 0}" ng-click="filterStage('Growth')">
                             <a href="javascript:void(0)">
                                 Growth
                                 <span class="pull-right">11 - 100</span>
                             </a>
                         </li>
-                        <li ng-class="{'active':global.context.selectedStage.indexOf('Scale') >= 0}" ng-click="filterStage('Scale')">
+                        <li ng-class="{'active':startups.selectedStage.indexOf('Scale') >= 0}" ng-click="filterStage('Scale')">
                             <a href="javascript:void(0)">
                                 Scale
                                 <span class="pull-right">100+</span>
@@ -55,14 +55,14 @@
                 </div>
                 <div class="panel-body filternav h226">
                     <ul class="panel-list">
-                        <li ng-class="{'active':global.context.selectedIndustry.indexOf('*') >= 0}" ng-click="filterIndustry('*');">
+                        <li ng-class="{'active':startups.selectedIndustry.indexOf('*') >= 0}" ng-click="filterIndustry('*');">
                             <a><i class="fa fa-fw fa-globe themed-color-dark icon-push"></i> <strong>All</strong></a>
                         </li>
                         <li>
                             <hr style="margin: 10px 0 10px 0;">
                         </li>
-                        <li ng-repeat="industry in industries" ng-class="{'active':global.context.selectedIndustry.indexOf(industry[global.context.location].profile.name) >= 0}" ng-click="filterIndustry(industry[global.context.location].profile.name);">
-                            <a><i class="fa {{industry[global.context.location].profile.icon}}"></i> {{industry[global.context.location].profile.name}}</a>
+                        <li ng-repeat="industry in startups.industries" ng-class="{'active':startups.selectedIndustry.indexOf(industry[startups.community.key].profile.name) >= 0}" ng-click="filterIndustry(industry[startups.community.key].profile.name);">
+                            <a><i class="fa {{industry[startups.community.key].profile.icon}}"></i> {{industry[startups.community.key].profile.name}}</a>
                         </li>
                     </ul>
                 </div>
@@ -76,14 +76,14 @@
                 </div>
                 <div class="panel-body filternav h226">
                     <ul class="panel-list">
-                        <li ng-class="{'active':global.context.selectedNetwork.indexOf('*') >= 0}" ng-click="filterNetwork('*');">
+                        <li ng-class="{'active':startups.selectedNetwork.indexOf('*') >= 0}" ng-click="filterNetwork('*');">
                             <a><i class="fa fa-fw fa-globe themed-color-dark icon-push"></i> <strong>All</strong></a>
                         </li>
                         <li>
                             <hr style="margin: 10px 0 10px 0;">
                         </li>
-                        <li ng-repeat="network in networks" ng-class="{'active':global.context.selectedNetwork.indexOf(network[global.context.location].profile.name) >= 0}" ng-click="filterNetwork(network[global.context.location].profile.name);">
-                            <a><i class="fa {{network[global.context.location].profile.icon}}"></i> {{network[global.context.location].profile.name}}</a>
+                        <li ng-repeat="network in startups.networks" ng-class="{'active':startups.selectedNetwork.indexOf(network[startups.community.key].profile.name) >= 0}" ng-click="filterNetwork(network[startups.community.key].profile.name);">
+                            <a><i class="fa {{network[startups.community.key].profile.icon}}"></i> {{network[startups.community.key].profile.name}}</a>
                         </li>
                     </ul>
                 </div>
@@ -100,23 +100,23 @@
                     <strong>{{startups.start}} - {{startups.end}}</strong> of <strong>{{startups.total_count}}&nbsp;
                     &nbsp;</strong>
                     <div class="btn-group btn-group-sm" style="margin-top: -2px;">
-                        <span ng-if="startups.prev"><a ng-click="getStartups(startups.prev)"
+                        <span ng-if="startups.prev"><a ng-click="startups.getStartups(startups.prev)"
                                                     class="btn btn-sm btn-default"
                                                     style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
-                        <span ng-if="startups.next"><a ng-click="getStartups(startups.next)"
+                        <span ng-if="startups.next"><a ng-click="startups.getStartups(startups.next)"
                                                     class="btn btn-sm btn-default"
                                                     style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
                     </div>
                 </div>
-                <span style="font-size: 17px;" ng-bind-html="title"></span>
+                <span style="font-size: 17px;" ng-bind-html="startups.title"></span>
             </div>
 
             <div class="panel-body content">
                 <div class="row">
                     <td style="border-bottom: 1px solid #fff; border-top: none; padding: 0;" colspan="3"></td>
                 </div>
-                <div ng-show="global.search.tag" style="text-align: center" ng-cloak><h2><br/>Searching for {{global.search.tag}}..</h2></div>
-                <div ng-repeat="item in startups" ng-switch on="$index % 2">
+                <div ng-show="startups.search.tag" style="text-align: center" ng-cloak><h2><br/>Searching for {{startups.search.tag}}..</h2></div>
+                <div ng-repeat="item in startups.startups" ng-switch on="$index % 2">
                     <div class="col-md-6" ng-switch-when="0">
                         <div class="row"  ng-include="'components/startups/startups.list.html'"></div>
                     </div>
@@ -130,10 +130,10 @@
                     <strong>{{startups.start}} - {{startups.end}}</strong> of <strong>{{startups.total_count}}&nbsp;
                     &nbsp;</strong>
                     <div class="btn-group btn-group-sm" style="margin-top: -2px;">
-                        <span ng-if="startups.prev"><a ng-click="getStartups(startups.prev)"
+                        <span ng-if="startups.prev"><a ng-click="startups.getStartups(startups.prev)"
                                                     class="btn btn-sm btn-default"
                                                     style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
-                        <span ng-if="startups.next"><a ng-click="getStartups(startups.next)"
+                        <span ng-if="startups.next"><a ng-click="startups.getStartups(startups.next)"
                                                        class="btn btn-sm btn-default"
                                                  style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
                     </div>
