--- a/app/components/startups/startups.profile.html
+++ b/app/components/startups/startups.profile.html
@@ -1,4 +1,4 @@
-<div class="row" ng-controller="StartupProfileController">
+<div class="row">
     <div class="col-lg-12">
         <div class="hpanel hgreen">
             <div class="panel-body">
