--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -112,8 +112,9 @@
             <li class="active">
                 <a href="#"><span class="nav-label">Locations</span><span class="fa arrow"></span> </a>
                 <ul class="nav nav-second-level">
-                    <li ng-repeat="item in nav.locations" ng-class="{active: nav.path.includes(item.key)}">
-                        <a ui-sref="location.dashboard({community_key: item.key})"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
+                    <li ng-repeat="item in nav.locations">
+                        <a ui-sref="location.dashboard({community_key: item.key})" ng-class="{active: nav.path.includes(item.key)}"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
+                        <ul ng-if="nav.path.includes(item.key)" ng-include="'components/common/nav/nav_subitems.html'"></ul>
                     </li>
                 </ul>
             </li>
@@ -123,6 +124,7 @@
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.industries" ng-class="{active: nav.path.includes(item.key)}">
                         <a ui-sref="industry.dashboard({community_key: item.key})"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
+                        <ul ng-if="nav.path.includes(item.key)" ng-include="'components/common/nav/nav_subitems.html'"></ul>
                     </li>
                 </ul>
             </li>
@@ -132,6 +134,7 @@
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.networks" ng-class="{active: nav.path.includes(item.key)}">
                         <a ui-sref="network.dashboard({community_key: item.key})"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
+                        <ul ng-if="nav.path.includes(item.key)" ng-include="'components/common/nav/nav_subitems.html'"></ul>
                     </li>
                 </ul>
             </li>
