working nav sub-items

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -439,6 +439,10 @@ footer, .push {
   border-left: 3px solid #eee;
 }
 
+#side-menu li .nav-second-level li ul li a {
+  color: #888;
+}
+
 #side-menu li .nav-second-level li ul li.active {
   color: #777;
   border-left: 3px solid #82BC4B;
