fixed url nav and removed map

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -371,7 +371,8 @@ footer, .push {
 /* Menu */
 .side-menu {
   width: 180px;
-  height: 72px;
+  height: 60px;
+  border-bottom: 1px solid #eee;
 }
 
 .side-menu.filler {
