--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -12,40 +12,12 @@
                 <div class="nav navbar-nav no-borders">
                     <div style="margin-top: 15px; margin-left: 0;">
 
-                        <div class="header-nav-link">
-                            <a ui-sref="people.dashboard({community_key: nav.community.key})">
-                                    <span>
-                                        <div class="col-xs-3 col-sm-1" style="text-align: center;">
-                                            <i class="pe-7s-id" style="font-size: 24px; margin-top: 6px;"></i>
-                                            <div class="visible-xs"><p style="font-size:12px;">People</p></div>
-                                        </div>
-                                        <div class="col-sm-4 col-md-4 col-lg-4 hidden-xs">
-                                            <h3 style="margin-top: 4px;">&nbsp;People</h3>
-                                        </div>
-                                        </span>
-                            </a>
-                        </div>
-
-
-                        <div class="header-nav-link pushright">
-                            <a ui-sref="startups.dashboard">
-                                    <span>
-                                        <div class="col-xs-3 col-sm-1" style="text-align: center;">
-                                            <i class="pe-7s-power" style="font-size: 24px; margin-top: 6px;"></i>
-                                            <div class="visible-xs"><p style="font-size:12px;">Startups</p></div>
-                                        </div>
-
-                                        <div class="col-sm-4 col-md-4 col-lg-4 hidden-xs">
-                                            <h3 style="margin-top: 4px;">Startups</h3>
-                                        </div>
-                                    </span>
-                            </a>
-                        </div>
+                       <textarea placeholder="Search.."></textarea>
 
                     </div>
                 </div>
             </div>
-            <div class="navbar-right hidden-xs">
+            <div class="navbar-right">
                 <ul class="nav navbar-nav no-borders">
                     <li class="dropdown">
                         <a tooltip-placement="left" tooltip="Search">
@@ -69,34 +41,21 @@
 
     <!-- Navigation -->
     <aside id="menu">
-        <div class="navbar-right visible-xs">
-            <ul class="nav navbar-nav no-borders">
-                <li class="dropdown" style="display: inline-block;">
-                    <a>
-                        <i class="pe-7s-help1"></i>
-                    </a>
-                </li>
-                <li class="dropdown" style="display: inline-block;">
-                    <a ui-sref="logout">
-                        <i class="pe-7s-upload pe-rotate-90"></i>
-                    </a>
-                </li>
-            </ul>
-        </div>
         <div class="profile-picture">
             <div class="container side-menu" style="padding-top: 10px; margin-left: -20px;">
                 <div class="row side-menu">
                     <div class="col-sm-3">
-                        <a ui-sref="people.profile"><img class="img-circle m-b" ng-src="{{nav.user.profile.avatar || nav.user.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}" alt="{{nav.user.profile.name}}" style="height: 40px; width: 40px; "/></a>
+                        <a ui-sref="people.profile({user: nav.user, community_key: nav.user.key})"><img class="img-circle m-b" ng-src="{{nav.user.profile.avatar || nav.user.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}" alt="{{nav.user.profile.name}}" style="height: 40px; width: 40px; "/></a>
                     </div>
                     <div class="col-sm-9" style="padding-top: 3px;">
-                        <a ui-sref="people.profile">{{nav.user.profile.name}}</a>
+                        <a ui-sref="people.profile({user: nav.user, community_key: nav.user.key})">{{nav.user.profile.name}}</a>
                         <div style="margin-left: -10px; padding-top: 1px;">
                             <span ng-repeat="item in nav.user.profile.roles" class="user-role"><i ng-attr-title="{{item}}" ng-class="{'text-primary fa fa-rocket' : item == 'Founder', 'text-info fa fa-graduation-cap' : item == 'Advisor', 'text-success fa fa-leaf' : item == 'Investor', 'text-danger fa fa-flag' : item == 'Leader'}"></i></span>
                         </div>
                     </div>
                 </div>
             </div>
+            <!--
             <div map-lazy-load="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXO1cNiJac7iP2I3JoXhOd1pWs6gA-f4k">
                 <map id="nav-map" center="{{nav.maploc}}" zoom="11" disable-default-u-i="true">
                     <custom-control position="BOTTOM_CENTER" on-click="changeLocation()">
@@ -105,6 +64,7 @@
                 </map>
                 <div class="side-menu filler"></div>
             </div>
+            -->
         </div>
 
         <ul side-navigation class="nav" id="side-menu">
