--- a/app/less/various.less
+++ b/app/less/various.less
@@ -393,7 +393,7 @@ footer, .push {
   color: #999;
   text-transform: uppercase;
   font-weight: 500;
-  padding: 15px 20px;
+  padding: 15px 20px 5px;
 }
 
 #side-menu li a i {
