fixed location dash

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -14,7 +14,7 @@
 // Additional colors
 @color-text: #6a6c6f;
 @color-bright: #f7f9fa;
-@color-background: #edf0f5;
+@color-background: #f1f3f6;
 @border-color: #e4e5e7;
 
 // Additional variables
