--- a/app/components/locations/location.dashboard.html
+++ b/app/components/locations/location.dashboard.html
@@ -30,7 +30,7 @@
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
-                            <img ng-repeat="leader in leaders.slice(3, 7) | limitTo: 3" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || 'images/blank_avatar.png'}}"/>
+                            <img ng-repeat="leader in loc.leaders.slice(3, 7) | limitTo: 3" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
                         </div>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
-                            <img ng-repeat="leader in leaders.slice(11, 15) | limitTo: 3" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || 'images/blank_avatar.png'}}"/>
+                            <img ng-repeat="leader in loc.leaders.slice(7, 11) | limitTo: 3" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
                         </div>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
-                            <img ng-repeat="leader in leaders.slice(7, 11) | limitTo: 2" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || 'images/blank_avatar.png'}}"/>
+                            <img ng-repeat="leader in loc.leaders.slice(2, 14) | limitTo: 2" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
                         </div>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
-                            <img ng-repeat="leader in leaders.slice(15, 18) | limitTo: 2" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || 'images/blank_avatar.png'}}"/>
+                            <img ng-repeat="leader in loc.leaders.slice(15, 18) | limitTo: 2" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
-                            <img ng-repeat="leader in leaders.slice(18, 21) | limitTo: 2" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || 'images/blank_avatar.png'}}"/>
+                            <img ng-repeat="leader in loc.leaders.slice(18, 21) | limitTo: 2" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
                         </div>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
-                            <img ng-repeat="leader in leaders.slice(25, 28) | limitTo: 3" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || 'images/blank_avatar.png'}}"/>
+                            <img ng-repeat="leader in loc.leaders.slice(25, 28) | limitTo: 3" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
                         </div>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                         </div>
                     </div>
                     <div class="col-xs-8" >
-                        <canvas class="chart chart-line" data="charts.people.data" labels="charts.people.labels" series="charts.people.series" colours="charts.people.colors" options="charts.options" height="95" style="padding: 0 15px;">
+                        <canvas class="chart chart-line" data="loc.charts.people.data" labels="loc.charts.people.labels" series="loc.charts.people.series" colours="loc.charts.people.colors" options="loc.charts.options" height="95" style="padding: 0 15px;">
                         </canvas>
                     </div>
                     <div class="col-xs-2">
@@ -267,8 +267,8 @@
                         </div>
                     </div>
                     <div class="col-xs-8" >
-                        <canvas class="chart chart-line" data="charts.startups.data"
-                                labels="charts.startups.labels" series="charts.startups.series" colours="charts.startups.colors" options="charts.options" height="95" style="padding: 0 15px;">
+                        <canvas class="chart chart-line" data="loc.charts.startups.data"
+                                labels="loc.charts.startups.labels" series="loc.charts.startups.series" colours="loc.charts.startups.colors" options="loc.charts.options" height="95" style="padding: 0 15px;">
                         </canvas>
                     </div>
                     <div class="col-xs-2">
@@ -341,8 +341,8 @@
                         </div>
                     </div>
                     <div class="col-xs-8" >
-                        <canvas class="chart chart-line" data="charts.jobs.data"
-                                labels="charts.jobs.labels" series="charts.jobs.series" colours="charts.jobs.colors" options="charts.options" height="95" style="padding: 0 15px;">
+                        <canvas class="chart chart-line" data="loc.charts.jobs.data"
+                                labels="loc.charts.jobs.labels" series="loc.charts.jobs.series" colours="loc.charts.jobs.colors" options="loc.charts.options" height="95" style="padding: 0 15px;">
                         </canvas>
                     </div>
                     <div class="col-xs-2">
