--- a/app/components/startups/startups.dashboard.html
+++ b/app/components/startups/startups.dashboard.html
@@ -61,8 +61,8 @@
                         <li>
                             <hr style="margin: 10px 0 10px 0;">
                         </li>
-                        <li ng-repeat="industry in startups.industries" ng-class="{'active':startups.selectedIndustry.indexOf(industry[startups.community.key].profile.name) >= 0}" ng-click="filterIndustry(industry[startups.community.key].profile.name);">
-                            <a><i class="fa {{industry[startups.community.key].profile.icon}}"></i> {{industry[startups.community.key].profile.name}}</a>
+                        <li ng-repeat="industry in startups.industries" ng-class="{'active':startups.selectedIndustry.indexOf(industry.profile.name) >= 0}" ng-click="filterIndustry(industry.profile.name);">
+                            <a><i class="fa {{industry.profile.icon}}"></i> {{industry.profile.name}}</a>
                         </li>
                     </ul>
                 </div>
@@ -82,8 +82,8 @@
                         <li>
                             <hr style="margin: 10px 0 10px 0;">
                         </li>
-                        <li ng-repeat="network in startups.networks" ng-class="{'active':startups.selectedNetwork.indexOf(network[startups.community.key].profile.name) >= 0}" ng-click="filterNetwork(network[startups.community.key].profile.name);">
-                            <a><i class="fa {{network[startups.community.key].profile.icon}}"></i> {{network[startups.community.key].profile.name}}</a>
+                        <li ng-repeat="network in startups.networks" ng-class="{'active':startups.selectedNetwork.indexOf(network.profile.name) >= 0}" ng-click="filterNetwork(network.profile.name);">
+                            <a><i class="fa {{network.profile.icon}}"></i> {{network.profile.name}}</a>
                         </li>
                     </ul>
                 </div>
