working people dash view

--- a/app/components/people/people.dashboard.list.html
+++ b/app/components/people/people.dashboard.list.html
@@ -7,8 +7,8 @@
         <a ui-sref="people.profile({user: item})" title="View {{::item.value.profile.name | words:0}}'s Profile" style="float: left; "><strong>{{::item.value.profile.name}} </strong></a>
         <a ng-show="{{(item.value.profile.linkedin.summary).length > 0}}" title="Show Summary" ng-click="showSummary = !showSummary" class="user-summary">&nbsp;&nbsp;<i class="fa fa-chevron-down fa-fw"></i>
         </a>
-        <li ng-repeat="(key, role) in item.value.communities" class="role-right">
-            <a href="{{'/' + key}}" class="btn btn-xs btn-outline" ng-class="{'btn-danger' : people.communities[key].type == 'startup', 'btn-info' : people.communities[key].type == 'network', 'btn-primary' : people.communities[key].type == 'industry', 'btn-success' : people.communities[key].type == 'location'}"><i class="fa {{people.communities[key].profile.icon}}"></i> {{people.communities[key].profile.name}}</a>
+        <li ng-repeat="val in item.value.communities" class="role-right">
+            <a href="{{'/' + val}}" ng-class="{'btn-danger' : people.communities[val].type == 'startup', 'btn-info' : people.communities[val].type == 'network', 'btn-primary' : people.communities[val].type == 'industry', 'btn-success' : people.communities[val].type == 'location'}" class="btn btn-xs btn-outline hidden"><i class="fa {{people.communities[val].profile.icon}}"></i> {{people.communities[val].profile.name}}</a>
         </li>
         <br>
         <div class="dash-row">
