--- a/app/less/buttons.less
+++ b/app/less/buttons.less
@@ -52,34 +52,42 @@
 
 .btn-primary.btn-outline {
   color: @color-navy-blue;
+  display: inline !important;
 }
 
 .btn-primary2.btn-outline {
   color: @color-violet;
+  display: inline !important;
 }
 
 .btn-success.btn-outline {
   color: @color-green;
+  display: inline !important;
 }
 
 .btn-info.btn-outline {
   color: @color-blue;
+  display: inline !important;
 }
 
 .btn-warning.btn-outline {
   color: @color-yellow;
+  display: inline !important;
 }
 
 .btn-warning2.btn-outline {
   color: @color-orange;
+  display: inline !important;
 }
 
 .btn-danger.btn-outline {
   color: @color-red;
+  display: inline !important;
 }
 
 .btn-danger2.btn-outline {
   color: @color-red-deep;
+  display: inline !important;
 }
 
 .btn-primary.btn-outline:hover,
