removed findkey, findval, and sorted_communities

--- a/app/components/startups/startups.dashboard.html
+++ b/app/components/startups/startups.dashboard.html
@@ -61,7 +61,7 @@
                         <li>
                             <hr style="margin: 10px 0 10px 0;">
                         </li>
-                        <li ng-repeat="industry in startups.industries" ng-class="{'active':startups.selectedIndustry.indexOf(industry.profile.name) >= 0}" ng-click="filterIndustry(industry.profile.name);">
+                        <li ng-repeat="industry in nav.industries" ng-class="{'active':startups.selectedIndustry.indexOf(industry.profile.name) >= 0}" ng-click="filterIndustry(industry.profile.name);">
                             <a><i class="fa {{industry.profile.icon}}"></i> {{industry.profile.name}}</a>
                         </li>
                     </ul>
@@ -82,7 +82,7 @@
                         <li>
                             <hr style="margin: 10px 0 10px 0;">
                         </li>
-                        <li ng-repeat="network in startups.networks" ng-class="{'active':startups.selectedNetwork.indexOf(network.profile.name) >= 0}" ng-click="filterNetwork(network.profile.name);">
+                        <li ng-repeat="network in nav.networks" ng-class="{'active':startups.selectedNetwork.indexOf(network.profile.name) >= 0}" ng-click="filterNetwork(network.profile.name);">
                             <a><i class="fa {{network.profile.icon}}"></i> {{network.profile.name}}</a>
                         </li>
                     </ul>
