--- a/app/less/various.less
+++ b/app/less/various.less
@@ -183,13 +183,18 @@ footer, .push {
 /* Google Maps */
 
 #nav-map {
+  display: block;
+  position: relative;
   width: 180px;
   height: 95px;
   margin-left: -20px;
   margin-top: -10px;
+  border-top: 1px solid #ddd;
 }
 
 #profile-map {
+  display: block;
+  position: relative;
   height: 158px;
   border: 1px solid #ddd;
 }
@@ -371,18 +376,18 @@ footer, .push {
 /* Menu */
 .side-menu {
   width: 180px;
-  height: 60px;
-  border-bottom: 1px solid #eee;
+  height: 71px;
+  //border-bottom: 1px solid #eee;
 }
 
 .side-menu.filler {
   background: #fff;
+  font-size: 10px;
   height: 14px;
   margin-top: -14px;
   margin-left: -20px;
   position: relative;
-  margin-bottom: -14px;
-  //border-top: 1px solid #DDD;
+  border-top: 1px solid #DDD;
 }
 
 #side-menu {
