--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -58,7 +58,7 @@
 
             <gm-map id="nav-map" gm-address="{address:nav.maploc}" options="{zoom: 11, disableDefaultUI: true, draggable: false, disableDoubleClickZoom: true, scrollwheel: false}">
             </gm-map>
-            <div class="side-menu filler"><a ng-click="changeLocation()">Change Community</a></div>
+            <div class="side-menu filler"><a ng-click="changeLocation()">Change</a></div>
 
         </div>
 
