fixed profile view

--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -58,7 +58,7 @@
 
             <gm-map ng-init="nav.hideChange = true" id="nav-map" gm-address="{address:nav.maploc}" options="{zoom: 11, disableDefaultUI: true, draggable: false, disableDoubleClickZoom: true, scrollwheel: false}" on-mouseover="nav.setMap(map.getCenter())" on-mouseclick="nav.setMap(map.getCenter())" on-mouseout="nav.hideChange = true; map.panTo(nav.latlng);">
                 <gm-infowindow ng-if="!nav.hideChange" options="{content: '<div id=&#34;changeLocation&#34; style=&#34;font-size: 12px;
-    padding-right: 10px;&#34;><a nohref>Change Community</a></div>', position: nav.latlng}"></gm-infowindow>
+    padding-right: 10px;&#34;><a nohref>Change Location</a></div>', position: nav.latlng}"></gm-infowindow>
             </gm-map>
             <div class="side-menu filler"></div>
 
