--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,37 +1,26 @@
 /* Custom */
 
-// Google Map Custom Button
-#change-location {
-  cursor: pointer;
-  direction: ltr;
-  overflow: hidden;
-  text-align: center;
-  position: relative;
-  color: rgb(0, 0, 0);
-  font-family: "Roboto", Arial, sans-serif;
-  -webkit-user-select: none;
-  font-size: 9px !important;
-  background-color: rgb(255, 255, 255);
-  padding: 1px 6px;
-  border-bottom-left-radius: 2px;
-  border-top-left-radius: 2px;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  //border: 1px solid rgba(0, 0, 0, 0.14902);
-  -webkit-box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
-  box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
-  min-width: 28px;
-  font-weight: 400;
-  margin-bottom: 13px;
-  z-index: 9999999 !important;
-}
-
-#change-location:hover {
-  text-decoration: underline;
-}
-
 .stats-icon {
   margin-top: 2px;
+}
+
+.profile-ul {
+  padding-left: 0;
+  margin-left: -5px;
+  margin-top: -8px;
+  height: 12px;
+}
+
+.profile-div {
+  padding-bottom: 1px;
+}
+
+.profile-roles {
+  list-style: none;
+  display: inline;
+  float: left;
+  padding-left: 5px;
+  padding-top: 2px;
 }
 
 .user-role {
@@ -195,7 +184,7 @@ footer, .push {
 #profile-map {
   display: block;
   position: relative;
-  height: 158px;
+  height: 140px;
   border: 1px solid #ddd;
 }
 
