fixed location, tweaked isemptyobject

--- a/app/less/various.less
+++ b/app/less/various.less
@@ -326,6 +326,7 @@ footer, .push {
 .profile-picture {
   padding: 0 5px 0 20px;
   text-align: center;
+  margin-bottom: -10px;
 }
 
 .stats-box div {
