fixed nav for industries

--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -70,7 +70,7 @@
                 <a href="#"><span class="nav-label">Locations</span><span class="fa arrow"></span> </a>
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.locations">
-                        <a ui-sref="location.dashboard({community_key: item.key})" ng-class="{active: nav.path.includes(item.key)}"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
+                        <a ui-sref="location.dashboard({community_key: item.key, community: item})" ng-class="{active: nav.path.includes(item.key)}"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
                         <ul ng-if="nav.path.includes(item.key) && $state.current.name=='location.dashboard'" ng-include="'components/common/nav/nav_subitems.html'"></ul>
                     </li>
                 </ul>
@@ -90,7 +90,7 @@
                 <a href="#"><span class="nav-label">Networks</span><span class="fa arrow"></span> </a>
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.networks">
-                        <a ui-sref="network.dashboard({community_key: item.key})" ng-class="{active: nav.path.includes(item.key)}"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
+                        <a ui-sref="network.dashboard({community_key: item.key, community: item})" ng-class="{active: nav.path.includes(item.key)}"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
                         <ul ng-if="nav.path.includes(item.key) && $state.current.name=='network.dashboard'" ng-include="'components/common/nav/nav_subitems.html'"></ul>
                     </li>
                 </ul>
